--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -138,7 +138,7 @@
               <button class="dropbtn">October</button>
               <div class="dropdown-content">
                 <a href="#week39">Week 39</a>
-                <a href="#week40">Week 40 - 44</a>
+                <a href="#week40">Week 40 - 43</a>
               </div>
             </div>
           </li>
@@ -146,7 +146,15 @@
             <div class="dropdown">
               <button class="dropbtn">November</button>
               <div class="dropdown-content">
-                <a href="#week45">Week 45 - 49</a>
+                <a href="#week44">Week 44 - 47</a>
+              </div>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="dropbtn">December</button>
+              <div class="dropdown-content">
+                <a href="#week47">Week 47 - 52</a>
               </div>
             </div>
           </li>
@@ -3808,18 +3816,24 @@
         Midterms <br><br>
       </p>
       <br><br>
-      <h2 id="week40">Week 40 - Week 44</h2> <br>
+      <h2 id="week40">Week 40 - Week 43</h2> <br>
       <h3>October</h3><br><br>
       <p>CPTC</p>
       <br><br>
-      <h2 id="week45">Week 45 - Week 49</h2> <br>
+      <h2 id="week44">Week 44 - Week 47</h2> <br>
       <h3>November</h3><br>
       <p>
       CPTC <br><br>
       PWK Course <br><br>
       </p>
       <br><br>
-
+      <h2 id="week48">Week 48 - Week 52</h2> <br>
+      <h3>December</h3><br>
+      <p>
+      CPTC <br><br>
+      PWK Course <br><br>
+      </p>
+      <br><br>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
