--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="/WebPages/daily-2022.html" target="_blank">DAILY</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/blogs.html" target="_blank">BLOGS</a>
+            <a class="nav-link" href="https://hackersarcade.com/blog/" target="_blank">BLOGS</a>
           </li>
           <!---
           <li class="nav-item">
