--- a/WebPages/competitions.html
+++ b/WebPages/competitions.html
@@ -44,10 +44,27 @@
         -->
         <h1>Competitions</h1> <br><br>
         <!-- <h2 id="universitycomps" style="color:red">University Competitions</h2><br><br> -->
+        </p>
+        <h1 style="color:DodgerBlue">National Collegiate Penetration Testing Competition 2022</h1><br>
+        <p>
+        <b>Role:</b> Member <br><br>
+        <b>Results:</b> <br><br>
+        Finalist in Global Finals <br><br>
+        2nd Place in Southeast Regionals <br><br>
+        Member of the University of Texas at San Antonio’s CPTC team. CPTC is a competition for college students to demonstrate their technical and business skills by conducting a full penetration test and finding vulnerabilities in a stimulated corporate network infrastructure. The team was  responsible for responding to client questions while actively trying to find vulnerabilities and writing a professional report within a specific timeframe.   
+        <br></br>
+        <a href="https://cp.tc/">
+          <img src="/img/CPTCLogo_FullColor.png" alt="CPTC">
+        </a>
+        <img src="/img/CPTCRegionals.JPG" alt="CPTC" width="450" height="425">
+        <br><br>
+        <br><br>
+        </p>
+        <br><br>
         <h1 style="color:DodgerBlue">NCAE Cyber Games 2022</h1><br>
         <p>
-        Role: Captain <br><br>
-        Result: 3rd in Regionals <br><br>
+        <b>Role: </b>Captain <br><br>
+        <b>Result:</b> 3rd in Regionals <br><br>
         Captain of the University of Texas at San Antonio’s NCAE team. NCAE is a competition for college students where we learn about cyber
         competitions in an environment focused on teamwork, building confidence and growing our skills.
         <br></br>
@@ -55,7 +72,8 @@
           <img src="/img/ncae-cyber-games.png" alt="NCAE CYBER GAMES">
         </a>
         </p>
-        <br><br>
+        <br><br><br><br>
+        <!--
         <h1 id="ccdc" style="color:DodgerBlue">Collegiate Cyber Defense Competition 2022</h1><br>
         <p>
         Role: Sub Member <br><br>
@@ -70,9 +88,10 @@
         <img src="/img/ccdc-trophy2.png" alt="CCDC" width="250" height="225">
         </p>
         <br><br><br><br>
+        -->
         <h1 id="ccdc" style="color:DodgerBlue">National Security Agency National Cyber Exercise 2022</h1><br>
         <p>
-          Role: Member <br><br>
+          <b>Role:</b> Member <br><br>
           Member of the University of Texas at San Antonio’s Malware and Cyber Combat Exercise Teams. NCX is a year-round education, training and
           exercise program that culminates in a three-day cyber competition that challenges participating academy and military service college students
           in near full-spectrum cyber operations.
