--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="des">
         <img src="/img/Insta.png" class="img-fluid round"> <br><br>
         <h1>Aditya Dindi</h1> <br>
-        <small class="lead"><strong>Cyber Security Intern @</strong> MITRE</small> <br>
+        <small class="lead"><strong>Cyber Security Engineer @</strong> ARL</small> <br>
         <small class="lead"><strong>Security Researcher @ <a href="https://hackersarcade.com/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
         <p class="lead"><strong>Cyber Security Student</strong> @ The University of Texas at San Antonio </p> <br>
         <a class="btn btn-outline-light" href="/WebPages/ADResume.pdf" role="button">MY RESUME</a><br><br><br><br>
