--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
         <p class="lead"><strong>Cyber Security Student</strong> @ The University of Texas at San Antonio </p> <br>
         <a class="btn btn-outline-light" href="/WebPages/ADResume.pdf" role="button">MY RESUME</a><br><br><br><br>
         <a href="https://www.linkedin.com/in/adityadindi/" target="_blank"><img src="/img/linkedln-img.png" class="img-fluid round" style="width:50px; height:50px"></a>&nbsp;<a href="https://github.com/Pyrus369" target="_blank"><img src="/img/github-img.png" class="img-fluid round" style="width:50px; height:50px"></a><a href="https://twitter.com/Pyrus369" target="_blank"><img src="/img/twitter-img.png" class="img-fluid round" style="width:50px; height:50px"></a><br><br><br><br>
+      <!--
         <h1 id="projects" style="color:DodgerBlue">PROJECTS</h1> <br>
-      <small class="text-muted lead"><strong><!--<a href="/" class="text-decoration-none" target="_blank">-->Cyber Security Homelab</strong></a></small> <br><br>
+      <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Cyber Security Homelab</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Portfolio Website</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/WebPages/daily-2021.html" class="text-decoration-none" target="_blank">Daily Hacking Challenge 2021 / Daily Hacking Guide (Resources)</a></strong></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://writeups.adityadindi.com" class="text-decoration-none" target="_blank">Capture The Flag Writeups</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/CyberSecurityProjects" class="text-decoration-none" target="_blank">CyberSecurity Projects using Python</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/Python-Programming" class="text-decoration-none" target="_blank">Python Programming</strong></a></small> <br><br>
       <br><br>
+      -->
       <!--
       <h1 id="work-exp" style="color:DodgerBlue">EXPERIENCE</h1> <br>
       <a href="https://hackersarcade.com/" target="_blank"><img src="/img/hackers-arcade.png" alt="HACKERS ARCADE" width="250" height="200"></a><br><br>
