--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://writeups.adityadindi.com" target="_blank">WRITEUPS</a>
+            <a class="nav-link" href="https://writeups.adityadindi.com">WRITEUPS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/daily-2022.html" target="_blank">DAILY</a>
+            <a class="nav-link" href="/WebPages/daily-2022.html">DAILY</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://hackersarcade.com/blog/" target="_blank">BLOGS</a>
+            <a class="nav-link" href="https://medium.com/@pyrus369">BLOGS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.youtube.com/channel/UCxz2fjxnj8YjtXrCOD_qAzA">YOUTUBE</a>
           </li>
           <!---
           <li class="nav-item">
