--- a/index.html
+++ b/index.html
@@ -32,19 +32,11 @@
           <li class="nav-item">
             <a class="nav-link" href="https://www.youtube.com/channel/UCxz2fjxnj8YjtXrCOD_qAzA">YOUTUBE</a>
           </li>
-          <!---
           <li class="nav-item">
-            <a class="nav-link" href="#work-exp">WORK-EXP</a>
+            <a class="nav-link" href="/WebPages/activities.html">ACTIVITIES / INTERESTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skills">SKILLS</a>
-          </li>
-          -->
-          <li class="nav-item">
-            <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES / INTERESTS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/WebPages/competitions.html" target="_blank">COMPETITIONS</a>
+            <a class="nav-link" href="/WebPages/competitions.html">COMPETITIONS</a>
           </li>
     </div>
   </nav>
@@ -54,7 +46,7 @@
       <div class="des">
         <img src="/img/Insta.png" class="img-fluid round"> <br><br>
         <h1>Aditya Dindi</h1> <br>
-        <small class="lead"><strong>Cyber Security Engineer @</strong> ARL</small> <br>
+        <small class="lead"><strong>Part-Time Cyber Security Engineer</strong></small> <br>
         <small class="lead"><strong>Security Researcher @ <a href="https://hackersarcade.com/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
         <p class="lead"><strong>Cyber Security Student</strong> @ The University of Texas at San Antonio </p> <br>
         <a class="btn btn-outline-light" href="/WebPages/ADResume.pdf" role="button">MY RESUME</a><br><br><br><br>
