--- a/WebPages/projects.html
+++ b/WebPages/projects.html
@@ -36,20 +36,22 @@
     <div class="container text-white">
       <div class="des">
         <img src="/img/Insta.png" class="img-fluid round"> <br><br><br>
-        <h1>Activities / Interests</h1> <br><br>
+        <h1>Projects</h1> <br><br>
+      <!--
       <h1 id="tryhackme" style="color:DodgerBlue">TryHackMe</h1><br>
       <script src="https://tryhackme.com/badge/198437"></script>
       <br><br>
-      <!--
+      
       <h2 id="tryhackme">Certificates</h2> <br>
       <img src="/img/THM-PreSecurity.png" alt="Pre-Security" width="600" height="300"> 
       <img src="/img/THM-WebFundamentals.png" alt="Web-Fundamentals" width="600" height="300"> 
       <img src="/img/THM-AdventOfCyber.png" alt="Advent-Of-Cyber" width="600" height="300"> 
-      -->
+      
       <h1 id="hackthebox" style="color:DodgerBlue">HackTheBox</h1><br>
       <a href="https://app.hackthebox.com/users/settings/475018" target="_blank"><img src="/img/hackthebox-profile.png" alt="HackTheBox Profile"></a>
       <br>
       </div>
+      -->
       <br><br><br><br>
       <p>Copyright © 2023 Aditya Dindi</p>
     </div>
