--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="https://www.youtube.com/channel/UCxz2fjxnj8YjtXrCOD_qAzA">YOUTUBE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/activities.html">ACTIVITIES / INTERESTS</a>
+            <a class="nav-link" href="/WebPages/projects.html">PROJECTS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/competitions.html">COMPETITIONS</a>
