--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="/WebPages/projects.html">PROJECTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/competitions.html">COMPETITIONS</a>
+            <a class="nav-link" href="/WebPages/activities.html">COMPETITIONS</a>
           </li>
     </div>
   </nav>
