--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </li>
           -->
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/activities.html">COMPETITIONS</a>
+            <a class="nav-link" href="/WebPages/activities.html">Activities</a>
           </li>
     </div>
   </nav>
