--- a/WebPages/projects.html
+++ b/WebPages/projects.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style3.css">
 
-    <title>Aditya's Personal Site</title>
+    <title>Aditya's Portfolio Site</title>
     <link rel="icon" href="/img/detective.png">
   </head>
   <body>
@@ -21,14 +22,6 @@
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
-        <!--
-          <li class="nav-item">
-            <a class="nav-link" href="#universitycomps">University Competitions</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#ctfs">CTF Competitions</a>
-          </li>
-        -->
         </ul>
       </div>
     </div>
@@ -37,9 +30,9 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <h1>Blogs</h1> <br><br>
-        <a href="https://hackersarcade.medium.com/the-mitre-att-ck-framework-5d33fec7aa50" class="text-decoration-none text-white" target="_blank"><h3>The MITRE ATT&CK Framework</h3></a><small><span class="badge bg-success">June 2 2022 </span></small><br><br><br><br>
-        <a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none text-white" target="_blank"><h3>Noobs Guide to Web Application Pentesting</h3></a><small><span class="badge bg-info">March 30 2021 </span></small><br><br>
+        <h1>Projects</h1> <br><br>
+        <a href="#" class="text-decoration-none text-white"><h3>Automated Cloud Cybersecurity Homelab</h3></a><br><br><br><br>
+        <a href="#" class="text-decoration-none text-white"><h3>Red Team Assessment, TryHackMe Red Team Capstone</h3></a><br><br>
       </div>
     </div>
   </center>
