--- a/index.html
+++ b/index.html
@@ -24,19 +24,14 @@
             <a class="nav-link" href="https://writeups.adityadindi.com">WRITEUPS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/WebPages/daily-2022.html">DAILY</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="https://medium.com/@pyrus369">BLOGS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.youtube.com/channel/UCxz2fjxnj8YjtXrCOD_qAzA">YOUTUBE</a>
           </li>
-          <!--
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/projects.html">PROJECTS</a>
           </li>
-          -->
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html">ACTIVITIES</a>
           </li>
@@ -46,15 +41,14 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="/img/Insta.png" class="img-fluid round"> <br><br>
+        <img src="/img/profile.png" class="img-fluid round" width="250" height="250"> <br><br><br>
         <h1>Aditya Dindi</h1> <br>
-        <small class="lead"><strong>Part-Time Cyber Security Engineer</strong></small> <br>
-        <small class="lead"><strong>Security Researcher @ <a href="https://hackersarcade.com/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
-        <p class="lead"><strong>Cyber Security Student</strong> @ The University of Texas at San Antonio </p> <br>
+        <small class="lead"><strong>Part-Time Cyber Security Researcher</strong></small> <br>
+        <p class="lead"><strong>Cyber Security Student @ The University of Texas at San Antonio </strong> </p> <br>
         <a class="btn btn-outline-light" href="/WebPages/ADResume.pdf" role="button">MY RESUME</a><br><br><br><br>
-        <a href="https://www.linkedin.com/in/adityadindi/" target="_blank"><img src="/img/linkedln-img.png" class="img-fluid round" style="width:50px; height:50px"></a>&nbsp;<a href="https://github.com/Pyrus369" target="_blank"><img src="/img/github-img.png" class="img-fluid round" style="width:50px; height:50px"></a><a href="https://twitter.com/Pyrus369" target="_blank"><img src="/img/twitter-img.png" class="img-fluid round" style="width:50px; height:50px"></a><br><br><br><br>
-      <br><br>
-      <p>Copyright © 2023 Aditya Dindi</p>
+        <a href="https://www.linkedin.com/in/adityadindi/" target="_blank"><img src="/img/linkedln-img.png" class="img-fluid round" style="width:50px; height:50px"></a>&nbsp;<a href="https://github.com/Pyrus369" target="_blank"><img src="/img/github-img.png" class="img-fluid round" style="width:50px; height:50px"></a><a href="https://twitter.com/Pyrus369" target="_blank"><img src="/img/X.jpg" class="img-fluid round" style="width:50px; height:50px"></a><br><br><br><br>
+      <br><br><br><br><br><br>
+      <p>Copyright © 2024 Aditya Dindi</p>
       </div>
     </div>
   </center>
