--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="https://writeups.adityadindi.com">WRITEUPS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://medium.com/@pyrus369">BLOGS</a>
+            <a class="nav-link" href="https://blogs.adityadindi.com">BLOGS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.youtube.com/channel/UCxz2fjxnj8YjtXrCOD_qAzA">YOUTUBE</a>
@@ -36,6 +36,9 @@
           -->
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/activities.html">ACTIVITIES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://medium.com/@pyrus369">MEDIUM</a>
           </li>
     </div>
   </nav>
