--- a/WebPages/activities.html
+++ b/WebPages/activities.html
@@ -50,6 +50,10 @@
                 <td>2023</td>
             </tr>
             <tr>
+                <td>CompTIA CySA+</td>
+                <td>2024</td>
+            </tr>
+            <tr>
                 <td>CompTIA Security+</td>
                 <td>2022</td>
             </tr>
