--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1>Aditya Dindi</h1> <br>
         <small class="lead"><strong>Part-Time Cyber Security Researcher</strong></small> <br>
         <p class="lead"><strong>Cyber Security Student @ The University of Texas at San Antonio </strong> </p> <br>
-        <a class="btn btn-outline-light" href="/WebPages/ADResume.pdf" role="button">MY RESUME</a><br><br><br><br>
+        <a class="btn btn-outline-light" href="/WebPages/WebsiteResume.pdf" role="button">MY RESUME</a><br><br><br><br>
         <a href="https://www.linkedin.com/in/adityadindi/" target="_blank"><img src="/img/linkedln-img.png" class="img-fluid round" style="width:50px; height:50px"></a>&nbsp;<a href="https://github.com/Pyrus369" target="_blank"><img src="/img/github-img.png" class="img-fluid round" style="width:50px; height:50px"></a><a href="https://twitter.com/Pyrus369" target="_blank"><img src="/img/X.jpg" class="img-fluid round" style="width:50px; height:50px"></a><br><br><br><br>
       <br><br><br><br><br><br>
       <p>Copyright © 2024 Aditya Dindi</p>
