--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="/WebPages/activities.html">ACTIVITIES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://medium.com/@pyrus369">MEDIUM</a>
+            <a class="nav-link" href="https://medium.com/@pyrus369">BLOGS</a>
           </li>
     </div>
   </nav>
